# advent-of-code-2016

./: .gitignore  LICENSE  advent-of-code2016.cabal
day-01/: Main.hs
day-02/: Main.hs
day-03/: Main.hs
day-04/: Main.hs
day-05/: Main.hs
day-06/: Main.hs
day-07/: Main.hs  main.c
day-08/: Main.hs
day-09/: Main.hs  Main2.hs  tests-v2.txt  tests.txt
day-10/: Main.hs
day-11/: Main.hs  Main2.hs
execs/: Day12.hs  Day13.hs
