cabal-version:      2.4
name:               advent-of-code2016
version:            0.1.0.0
author:             Paolo
maintainer:         mrtnpaolo@gmail.com
license:            ISC
license-file:       LICENSE
copyright:          2016 Paolo Martini <mrtnpaolo@gmail.com>

library
    exposed-modules:  Advent
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   common
    default-language: Haskell2010

executable Day12
    main-is:            Day12.hs
    build-depends:
        base ^>=4.14.1.0,
        advent-of-code2016,
        containers ^>=0.6.2.1
    hs-source-dirs:     execs
    default-language:   Haskell2010
    default-extensions:
        RecordWildCards,
        ViewPatterns
